--- a/index.html
+++ b/index.html
@@ -98,21 +98,21 @@
           <div class="row justify-content-center">
             <div class="col-md-4 mb-3">
               <div class="card" >
-                <img src="img/web.png" class="card-img-top" alt="Project 1">
+                <img src="img/Crowde.png" class="card-img-top" alt="Project 5">
                 <div class="card-body">
-                  <h5 class="card-title">Website</h5>
-                  <p class="card-text">Membuat landing page portofolio sederhana dengan html dan css.</p>
-                  <a href="https://juliastama.github.io/juliastama/" class="btn btn-primary">Lihat</a>
+                  <h5 class="card-title">UI/UX</h5>
+                  <p class="card-text">Membuat desain UI/UX menggunakan metode desain thinking</p>
+                  <a href="UIUX.html" class="btn btn-primary">Lihat</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-3">
               <div class="card" >
-                <img src="img/game.png" class="card-img-top" alt="Project 2">
+                <img src="img/web.png" class="card-img-top" alt="Project 1">
                 <div class="card-body">
-                  <h5 class="card-title">Game</h5>
-                  <p class="card-text">Membuat game shooter sederhana dengan construct 3 .</p>
-                  <a href="https://skypea.surge.sh/" class="btn btn-primary">Lihat</a>
+                  <h5 class="card-title">Website</h5>
+                  <p class="card-text">Membuat landing page portofolio sederhana dengan html dan css.</p>
+                  <a href="https://juliastama.github.io/juliastama/" class="btn btn-primary">Lihat</a>
                 </div>
               </div>
             </div>
@@ -126,6 +126,17 @@
                 </div>
               </div>
             </div>
+            <div class="col-md-4 mb-3">
+              <div class="card" >
+                <img src="img/game.png" class="card-img-top" alt="Project 2">
+                <div class="card-body">
+                  <h5 class="card-title">Game</h5>
+                  <p class="card-text">Membuat game shooter sederhana dengan construct 3 .</p>
+                  <a href="https://skypea.surge.sh/" class="btn btn-primary">Lihat</a>
+                </div>
+              </div>
+            </div>
+            
             <div class="col-md-4 mb-3">
               <div class="card" >
                 <img src="img/projects/pirate.jpeg" class="card-img-top" alt="Project 4">
